// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`YAMLLanguage > parse() > should raise errors 1`] = `
{
  "errors": [
    {
      "column": 1,
      "line": 2,
      "message": "Map keys must be unique",
    },
  ],
  "ok": false,
}
`;

exports[`YAMLLanguage > parse() > should raise multiple errors 1`] = `
{
  "errors": [
    {
      "column": 1,
      "line": 2,
      "message": "Map keys must be unique",
    },
    {
      "column": 1,
      "line": 3,
      "message": "Map keys must be unique",
    },
  ],
  "ok": false,
}
`;
